add product to docs
